@@ -722,7 +722,6 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
-                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_sensor 1 GAM</label>
             </Measurement>
             <Measurement>
@@ -731,7 +730,6 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
-                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <property name="scale_sync_ref_ordinal" value="19" type="Integer"/>
                 <label>label_temperature_sensor 2 GAM</label>
             </Measurement>
@@ -1219,7 +1217,6 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
-                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <label>label_temperature_sensor 1 EAM</label>
             </Measurement>
             <Measurement>
@@ -1228,7 +1225,6 @@
                 <unit>°C</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
-                <property name="reduction" value="20.0" type="Double" description="reduction of measurement value before apply offset and factor"/>
                 <property name="scale_sync_ref_ordinal" value="25" type="Integer"/>
                 <label>label_temperature_sensor 2 EAM</label>
             </Measurement>
